# Future_Ml_01

./: README.md  app.py  cleaned_retail_sales.csv  forecast_retail_sales_arima.csv  main.py  pyproject.toml  requirements.txt  test.py  trained.py
